--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -105,11 +105,10 @@ Damit ist es perfekt geeignet, um auch aufwendige 2D-Spiele darzustellen, die me
 \end{figure}
 Der 2D-Kontext wird von allen modernen Browsern unterstützt, Opera Mini bildet hier die einzige Ausnahme; sogar mobile Browser bieten die API durchgehend an. Sogar Internet-Explorer, der dafür bekannt ist, bei der Untersütztung von Standarts aus dem Rahmen zu fallen, bietet Canvas ab der Version 9.0 an. Natürlich gibt es viele Internet-Nutzer, die auch sehr alte Versionen von Browsern benutzen, allerdings sind diese für die Zielgruppe der online Spielenden Bevölkerung nicht besonders relevant; die meisten dieser alten Browser werden in Firmen mit veralteter IT-Technik benutzt, wo das Spielen am Computer sowieso verboten ist.
 TODO: bild vom support einbinden.
-\subsection{Frameworks}
+\subsection{Bibliotheken}
 Canvas ist die mit Abstand am weitesten verbreitete der hier vorgestellten Technologien. Dies ist wohl vor allem der niedrigen Lernkurve und dem schnellen Einstieg mit frühen Erfolgen zu danken. Daher ist die Community sehr aktiv und hat unzählige Tools, Bibliotheken und Frameworks entwickelt. Die wichtigsten dieser Tools werden hier in Kürze vorgestellt:
 \subsubsection{KineticJS}
-KineticJS ist ein auf HTML5 Canvas spezialisiertes, quelloffenes Framework, d.h. es bietet keinen Technologie-Fallback an. Es abstrahiert die Canvas-API und bietet eine Objekt-Orientier
-te API an, in der \emph{Shapes} definiert werden, die zu Gruppen zusammengefasst werden und dann verschiedenen \emph{Layers} zugeordnet werden. Die Layer zusammen bilden den Szene-Graph
+KineticJS ist eine auf HTML5 Canvas spezialisierte, quelloffene Bibliothek, d.h. sie bietet keinen Technologie-Fallback an. Sie abstrahiert die Canvas-API und bietet eine Objekt-Orientierte API an, in der \emph{Shapes} definiert werden, die zu Gruppen zusammengefasst werden und dann verschiedenen \emph{Layers} zugeordnet werden. Die Layer zusammen bilden den Szene-Graph
 en, der alle dargestellten Objekte beinhaltet. Die einzelnen Objekte der Szene können jetzt unabhängig animiert und transformiert werden. Dabei ist nicht nur Rotation und Translation mö
 glich, sondern z.b. auch Farb-Transformation u.Ä. Dazu kommt noch eine ereignis-basierte Architektur, mit der Animationen synchronisiert werden können.
 \paragraph{Beispiel}
@@ -119,18 +118,17 @@ Anbei ein kleines Beispiel, wie der KintectJS-Code aussieht. In diesem Beispiel 
 	\caption{KineticJS Beispiel}
 	\label{kineticjs_example}
 \end{figure}
-\paragraph{Verwendung} KineticJS wird bereits in vielen verschiedenen aktiven Projekten eingesetzt, auf http://kineticjs.com/ gibt es eine ganze Auswahl von verschiedenen Browser-Spiele
-n, die mit diesem Framework entwickelt wurden. Im Entwickler-Forum Stackoverflow gibt es hunderte Fragen zum Thema und über Google lassen sich Dutzende Tutorials finden, wie kleine Spie
+\paragraph{Verwendung} KineticJS wird bereits in vielen verschiedenen aktiven Projekten eingesetzt, auf http://kineticjs.com/ gibt es eine ganze Auswahl von verschiedenen Browser-Spielen, die mit dieser Bibliothek entwickelt wurden. Im Entwickler-Forum Stackoverflow gibt es hunderte Fragen zum Thema und über Google lassen sich Dutzende Tutorials finden, wie kleine Spie
 le mit KineticJS entwickelt werden können.
 \subsubsection{EaselJS}
-EaselJS ist ein Framework, dessen API an Flash angelehnt ist. So fällt der Übergang leichter. Darüber hinaus existieren verschiedene Tools, die alle auf (ehemalige) Flash-Entwickler abzielen. Zum Beispiel gibt es EaselFL, ein Flash-Fallback für alte Browser, die Canvas nicht unterstützen, oder Zoe, ein Exporter für SWF-Animationen in EaselJS-Spritesheets.
+EaselJS ist eine Bibliothek, deren API an Flash angelehnt ist. So fällt der Übergang leichter. Darüber hinaus existieren verschiedene Tools, die alle auf (ehemalige) Flash-Entwickler abzielen. Zum Beispiel gibt es EaselFL, ein Flash-Fallback für alte Browser, die Canvas nicht unterstützen, oder Zoe, ein Exporter für SWF-Animationen in EaselJS-Spritesheets.
 \paragraph{TweenJS/SoundJS/PreloadJS} EaselJS kümmert sich nur um die reine Arbeit mit HTML5 Canvas, Funktionen wie Animationen und Transformationen oder Sounds sind in eigenen Modulen gekapselt:
 \begin{itemize}
 	\item \emph{TweenJS} für Animationen und Transformationen
 	\item \emph{SoundJS} für Arbeiten mit Sounds
 	\item \emph{PreloadJS} für das Managen und Laden von Bildern und Spiele-Inhalten
 \end{itemize}
-Damit ist die EaselJS-Suite nicht nur ein Framework für das Arbeiten mit Canvas, sondern bietet Werkzeuge, um ganze Browser-Spiele oder andere Anwendungen zu entwickeln.
+Damit ist die EaselJS-Suite nicht nur eine Bibliothek für das Arbeiten mit Canvas, sondern bietet Werkzeuge, um ganze Browser-Spiele oder andere Anwendungen zu entwickeln.
 \subsection{Beispiel}
 Wie bereits erwähnt, ist die API von Canvas sehr schlicht und einfach zu erlernen. Dabei spielt sich alles im sogenannten Context-Objekt ab. Auf diesem können Methoden aufgerufen werden, um Bilder oder Linien auf  die Arbeitsfläche zu zeichnen. Um Animationen oder ähnliches zu realisieren, empfiehlt es sich, die Methode requestAnimation-Frame zu verwenden.
 \paragraph{requestAnimationFrame} Diese Methode bekommt als Parameter eine Funktion übergeben, die nach gewisser Zeit vom Browser aufgerufen wird. Üblicherweiße ruft diese Funktion rekursiv wieder requestAnimationFrame mit sich selbst als Parameter auf. Der Browser fungiert hier als Balancer und sorgt dafür, dass die Methode nicht öfter aufgerufen wird als nötig. So wird zum Beispiel die Framezahl pro Sekunde beschränkt und keine weiteren Aufrufe angefordert, wenn das Browser-Fenster nicht im Vordergrund ist. Um die Ablaufgeschwindigkeit des Spiels vom Verhalten der requestAnimationFrame-Methode zu entkoppeln, muss bei jedem Aufruf ermittelt werden, wie viel Zeit seit dem letzten Aufruf vergangen ist und zum Beispiel Bewegungs-Vektoren entsprechend angepasst werden.
@@ -178,8 +176,7 @@ Im Vergleich zur Canvas-API muss hier also viel Vorarbeit geleistet werden, bevo
 \paragraph{Canvas/WebGL-Hybrid} Mit WebGL sind zwar viele Dinge möglich, allerdings bietet es nur eine Low-Level-API. Zum Beispiel ist in der WebGL-Spezifikation kein nativer Text-Renderer vorgesehen. Natürlich ist es möglich, sich selbst einen Shader für diesen Zweck zu schreiben, allerdings gibt es die viel einfachere Lösung, gebrauch von der High-Level-API des Canvas-Elements zu machen und den Text in einem versteckten HTML5-Canvas zu rendern. Der Inhalt dieses Canvas kann dann als Textur in den WebGL-Kontext eingebunden und genutzt werden. Dies kann zum Beispiel im Lade-Zyklus des Spiels einmalig durchgeführt werden. So hat man alle Funktionen von HTML5-Canvas zur Verfügung, kann aber trotzdem von der gewaltigen Performance von WebGL Gebrauch machen.
 \paragraph{Rechteck-Koordianten} Um zum Beispiel ein Rechteck zu zeichnen, muss beachtet werden, dass die Koordinaten in WebGL nicht Pixeln entsprechen; es werden sogenannte Clipspace-Koordianten verwendet. Dabei ist die linke untere Ecke der Zeichenfläche immer -1 -1 und die rechte obere Ecke immer 1 1. In realen Anwendungen übernimmt die Umrechnung von Pixel- in Clipspace-Koordianten meist der Shader selbst - er benötigt dafür lediglich die Größe der Zeichenfläche in Pixeln. Die andere Besonderheit ist, dass nicht nur 4 Vertizes übergeben werden, wie man für ein Rechteck annehmen würde, sondern 6. Das liegt daran, dass in WebGL immer Dreiecke gezeichnet werden, daher müssen 2 Punkte doppelt definiert werden. Außer dem Zeichenmodus Dreiecke gibt es noch Spezialfälle, bei denen Vertizes eingespart werden können, diese würden jedoch diesen Rahmen sprengen.
 \newpage
-\subsection{Frameworks}
-\subsubsection{Pixi.js} Anders als die bisher vorgestellten Frameworks ist Pixi.js nicht nur ein vereinfachender API-Wrapper für die Zeichen-Technologie selbst, sondern eine komplette Game-Engine, bei der zwar der Haupt-Augenmerk auf dem Renderer liegt, aber viele andere Funktionen wie Kollisions-Erkennung, Multi-Plattform-Support (Mobile, PC), Multi-Touch, ein Asset-Loader und vieles mehr eingebaut sind. Dieser Abschnitt befasst sich aber hauptsächlich mit dem eingebauten Renderer.
+\subsection{Pixi.js} Anders als die bisher vorgestellten Frameworks ist Pixi.js nicht nur ein vereinfachender API-Wrapper für die Zeichen-Technologie selbst, sondern eine komplette Game-Engine, bei der zwar der Haupt-Augenmerk auf dem Renderer liegt, aber viele andere Funktionen wie Kollisions-Erkennung, Multi-Plattform-Support (Mobile, PC), Multi-Touch, ein Asset-Loader und vieles mehr eingebaut sind. Dieser Abschnitt befasst sich aber hauptsächlich mit dem eingebauten Renderer.
 \paragraph{Canvas-Fallback} Der Pixi.js-Renderer untersützt sowohl WebGL als auch Canvas; falls möglich, wird WebGL genutzt. So soll schlicht die Reichweite der pixi.js-Spiele erhöht werden, da viele Geräte in Umlauf zwar eine rudimentäre Canvas-Unterstützung, aber noch keinen Support für WebGL haben.
 \paragraph{Text-Rendering} Der oben erklärte Trick, die Canvas-API zu nutzen, um Text in Bitmap-Texturen für WebGL umzuwandeln, wird auch von pixi.js genutzt.
 \paragraph{Beispiel}
@@ -246,8 +243,7 @@ SVG (Scalable Vector Graphics) ist eine vom W3C entwickelte Spezifikation für e
 Wie im Beispiel \emph{SVG Namespace-Elemente} gut erkenntlich ist, macht es von JavaScript-Seite keinen Unterschied, ob es sich um ein herkömmliches DOM-Element oder ein SVG-Element handelt, die API mit Methoden wie createElement oder appendChild bleibt die gleiche.
 \paragraph{Umfang} Die SVG-API ist recht umfänglich, d.h. es müssen nicht grunsätzliche Funktionen wie Text-Rendering selbst implementiert werden. Zu den Fähigkeiten von SVG gehören das Darstellen von Polygonen, Kreisen und Rechtecken als auch Texte und eingebundene Rastergrafiken.
 \paragraph{Animation mit JavaScript} Da, wie bereits erwähnt, die Animationen in Spielen hoch dynamisch sind und ständig angepasst werden müssen, ist die einfachste Methode, SVG-Grafiken mit JavaScript zu animieren, die ständige Anpassung der Transformations-Parameter der einzelnen Elemente (Position, Drehung, ...). Deklarative Ansätze wie CSS3-Keyframe-Animationen oder SMIL eigenen sich höchstens für sich monoton wiederholende Hintergründe, nicht aber für Echtzeit-Spiele. Auch hier kann die HTML5-Methode \emph{requestAnimationFrame} genutzt werden, um eine sinnvolle Anpassungsrate des SVG-Dokuments zu gewährleisten.
-\subsection{Frameworks}
-\subsubsection{RaphaelJS}
+\subsection{RaphaelJS}
 RaphaelJS ist eine Abstraktions-Schicht für die SVG-API. Dabei wird ein \emph{Wrapper} sowohl für die SVG-Zeichenfunktionen als auch für die HTML-Eventhandler geboten. Hinzu kommen viele Hilfsmethoden, die das Erstellen von komplexen Grafiken deutlich beschleunigen. Vor allem für die Erstellung von Animationen aller Art ist die JavaScript-API von RaphaelJS sehr praktisch, da die XML-Animations-Notation in SVG sehr umständlich und schlecht lesbar ist.
 \paragraph{Kompatibilität} Ein weiterer Vorteil von RaphaelJS ist die eingebaute Untersützung für ältere Browser; für frühere Versionen des Internet-Explorers wird ein Fallback auf \emph{VML} durchgeführt.
 \paragraph{Verwendung} RaphaelJS wird genau wie SVG selbst meistens für Diagramme und ähnliche, statische Zwecke eingesetzt, es gibt aber auch ein auf RaphaelJS basierndes Browserspiel, dass die Technik erfolgreich einsetzt: https://github.com/petehamilton/gravitas
@@ -272,16 +268,20 @@ circle.attr("stroke", "#fff");
 \newpage
 \subsection{Beispiel}
 Das Arbeiten mit SVG ist sehr einfach, es muss nur für jedes Objekt im Spiel ein SVG-Element angelegt und dem Zeichenflächen-Element angehängt werden. Um z.B. die Position zu verändern, müssen nur die entsprechenden Attribute im SVG-Element gesetzt werden, in diesem Fall \emph{x} und \emph{y}. Zu beachten ist, dass es sich hierbei um die naive Implementierung handelt, die nicht auf die erweiterten Animations-Möglichkeiten von SVG zurückgreift. Dies ist in realen Anwendung auch oft gar nicht möglich, da jetzt die Animation in einer Sekunde noch gar nicht bekannt ist.
+
+Wie bei jeder Technologie kann auch hier die Helfer-Methode \emph{requestAnimationFrame} verwendet werden, um die Anzahl der Renderings pro Sekunde konstant auf einem sinnvollen Level zu halten.
+
+\paragraph{Namespaces} Die Namespaces in SVG sind umständlich zu programmieren, da man sie bei jeder Erstellung eines Elements und bei jedem Setzen eines Attributs der jeweilige Namespace angegeben werden muss; zusätzlich muss der Namespace noch mit Doppelpunkt getrennt vor den Attribut-Namen gesetzt werden. Weiter verkompliziert wird die Arbeit mit der SVG-API auch dadurch, dass beispielsweise das Attribut zum Setzen einer Rastergrafik als Hintergrund eines SVG-Objektes einen anderen Namespace hat als das SVG-Element selbst, die Koordinaten-Angaben dagegen haben gar keinen Namespace. Diesen Mehraufwand spart man sich am Besten durch die Verwendung einer Bibliothek, die diese Dinge gegenüber dem Programmierer abstrahiert.
 \begin{figure}[H]
 	\inputminted{javascript}{assets/vanillasvg_example.js}
 	\caption{SVG-Beispiel}
 	\label{svg_example}
 \end{figure}
+\newpage
 \subsection{Performance}
 %http://smus.com/canvas-vs-svg-performance/
 Im Benchmark-Test schaffte die SVG-Implementierung nur 500 Objekte, wo WebGL 80.000 bzw. Canvas 9.000 rendern konnte. Das macht klar, dass SVG ungeeignet ist für Spiele mit vielen Objekten, die ständig neu gezeichnet werden müssen. Dennoch gibt es Spiele wie das oben erwähnte Gravitas, die erfolgreich SVG zur Darstellung einsetzen. Das hat vor allem damit zu tun, dass es auch im Spiele-Umfeld Anwendungen gibt, bei denen nur wenige Objekte gleichzeitig dargestellt werden, bzw. bei denen nur selten Neu-Zeichnungen durchgeführt werden. Ausserhalb des Spiele-Usecases eignet sich SVG daher vor allem für Statistiken oder Karten-Darstellungen. Ein Performance-Gewinn in SVG-Spielen ist vor allem dadurch möglich, das Neu-Zeichnen der kompletten Fläche zu verhindern und den Szene-Graph wie auch die Transformations-Anweisungen so aufzubauen, dass Optimierungen angewendet werden können. Wie bereits erwähnt ist die sorgfältige Definition von gleichmäßigen Bewegungen z.B. in einem Spiel wie Super-Mario, in dem sich Bewegungsrichtung und -art von Objekten ständig innerhalb von Sekunden ändert, nicht möglich.
-\newpage
-\subsubsection{Browser-Vergleich} Im direkten Browser-Vergleich sticht die schlechte Unterstützung von Firefox ins Auge. Diese scheint ab Version 18 aufzutreten. Leider ist es sehr schwierig, hierfür die Ursache zu finden; die Browser entwickeln sich in enorm hohen Tempo weiter und Dinge wie die Zeichenperformance für gewisse Operationen können von Version zu Version sehr stark fluktuieren.
+\subsubsection{Browser-Vergleich} Im direkten Browser-Vergleich sticht die schlechte Unterstützung von Firefox ins Auge. Diese scheint ab Version 18 aufzutreten. Leider ist es sehr schwierig, hierfür die Ursache zu finden; die Browser entwickeln sich in enorm hohen Tempo weiter und Dinge wie die Performance für gewisse Operationen können von Version zu Version sehr stark fluktuieren.
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{assets/browser_comp_svg} 
 	\caption{Browser-Vergleich SVG}
@@ -299,23 +299,11 @@ Eine andere Möglichkeit, HTML-Elemente zur Darstellung von Spiele-Objekten zu v
 	\caption{CSS3-Transforms Unterstützung}
 	\label{css_transforms_support}
 \end{figure}
-\paragraph{Programmierung} Auch die Programmierung per JavaScript ist sehr einfach. Hier können genau wie bei SVG die APIs zur HTML-Element-Manipulation genutzt werden. Die Position eines Objektes zum Beispiel lässt sich folgendermaßen über die CSS-Attribute \emph{top} und \emph{left} steuern.
-\begin{figure}[H]
-	\begin{minted}{javascript}
-//setze x-position
-imgEl.style.left = xPos + "px";
-//setze y-position
-imgEl.style.top = yPos + "px";
-	\end{minted}
-	\caption{DOM-Position}
-	\label{dom_position_example}
-\end{figure}
 \paragraph{CSS Hardware-Unterstützung} CSS3-Transformationen werden in vielen modernen Browsern mit \emph{Hardware-Unterstützung}, also mithilfe der Grafikkarte berechnet. Das beschleunigt rechenaufwändige Effekte wie Schatten oder 3D-Transformationen enorm.
 \paragraph{Interaktivität} Da Spiele-Objekte hier auch DOM-Elemente sind, ist es problemlos möglich, Events wie Klick oder Mouse-Over zu binden und für die Interaktivität im Spiel zu nutzen. Bei Canvas oder WebGL beispielweise muss selbst berechnet werden, wann und ob solche Ereignisse eintreten.
-\subsection{Frameworks}
-\subsubsection{Sprite.js}
+\subsection{Sprite.js}
 Das Framework  Sprite.js, das sich darauf spezialisiert hat, Sprites, also Animationen mit Einzelbildern für jeden Frame, in jedem Browser darzustellen, hat sowohl einen Renderer für Canvas, WebGL als auch DOM-Elemente. Das Augenmerk liegt hier vor allem an der Portabilität; die Darstellung von Sprites als DOM-Element beherrscht jeder Browser. Der Vorteil des Frameworks ist es, dass eine Abstraktions-Schicht gegeben ist, mit der sowohl DOM als auch WebGL und Canvas mit der selben, einfach zu erlernenden API gesteuert werden können.
-\paragraph{Verwendung} Verschiedene kleine Browsergames wie Steam oder Webbattle.js setzen Sprite.js ein, um die Spiele-Oberfläche zu rendern. Da viele Spiele als Umgebung Karten einsetzen, die aus Kacheln aufgebaut sind, hat Sprite.js dafür eine eigene Klasse, damit die Kachel-Objekte effizient berechnet und angezeigt werden können. Damit ist Sprite.js mehr als nur eine Abstraktions-Schicht für die verschiedenen Zeichen-Technologien, sondern bringt auch eigene Logik mit, mit der eigene Spiele schnell und einfach entwickelt werden können.
+\paragraph{Verwendung} Verschiedene kleine Browsergames wie Steam oder Webbattle.js setzen Sprite.js ein, eine richtige Community hat sich jedoch bisher nicht gebildet. Generell wird das Thema Browser-Spiele mithilfe des DOM innerhalb der Web-Community eher selten angegangen.
 %http://batiste.dosimple.ch/games/steam9/
 % https://github.com/tadast/webattle.js
 \subsection{Beispiel}
@@ -325,10 +313,10 @@ Die Arbeit mit herkömmlichen DOM-Elementen gleicht dem Ansatz von SVG stark. Es
 	\caption{DOM-Beispiel}
 	\label{dom_example}
 \end{figure}
+\newpage
 \subsection{Performance}
 Die DOM-Implementierung schafft je nach Browser zwischen 450 und 500 Objekten, wenn Canvas 9.000 oder WebGL 80.000 schafft. Damit rangiert sie noch knapp unter der Performance von SVG und ist wie SVG selbst nicht geeignet, schnelle, interaktive Spiele darzustellen. Jedoch wurde auch hier genau wie bei SVG auf die Verwendung von CSS-Transitionen oder ähnliches verzichtet, was bei gleichförmigen Bewegungen auf jeden Fall einen Performance-Gewinn bringen kann.
 \paragraph{Verwendung} Zusammenfassend lässt sich sagen, dass CSS-Spiele zwar sehr viele Gestaltungsmöglichkeiten mit sich bringt, es aber aufgrund der performance-technischen Beschränkungen der Arbeit mit dem DOM nicht möglich ist, viele separate Objekte darzustellen. Für einfache Spiele, die nur wenige Objekte gleichzeitig anzeigen, lohnt sich jedoch ein Blick auf diese Technik auf jeden Fall, da Abwärts-Kompatibilität gewährleistet und die Programmierung nicht sehr aufwendig ist.
-\newpage
 \subsubsection{Browser-Vergleich} Auch bei der Darstellung des DOM-Benchmarks enttäuscht der Internet-Explorer mit schlechter Performance. Die Gründe dafür sind wie schon bei den anderen Technologien erwähnt schwierig zu ermitteln und können aufgrund der Schlichtheit des verwendeten Beispiels auch in der Praxis nur eine kleine Auswirkung haben. Im Performance-Test vom \emph{Tom's Hardware} werden aber ähnliche Ergebnisse ermittelt wie im hier behandelten Benchmark; Firefox und Chrome sind gleichauf und Internet Explorer liefert eine deutlich schwächere Leistung.
 %TODO: quote http://www.tomshardware.com/reviews/chrome-27-firefox-21-opera-next,3534-6.html
 \begin{figure}[H]
